# sea-gang

./: .gitignore  Analysis.md  README.md  pyproject.toml  requirements.txt
src/seagang/: __init__.py  cli.py  config.py  dashboard.py  db.py  models.py  monitor.py  queue.py  runner.py  scheduler.py
tests/: test_core.py
tools/: enrich-and-publish.sh  svc
